# ayyildizhaber

./: .replit  .zipignore  API_DOCUMENTATION.md  KURULUM-REHBERI.md  KURULUM.md  README-DEPLOYMENT.md  README.md  VPS-KURULUM-REHBERİ.md  VPS_KURULUM_REHBERI.md  VPS_KURULUM_REHBERİ.md  WINDOWS-KURULUM.md  ad_routes.py  admin_config_routes.py  admin_routes.py  api_routes.py  app.py  cookies.txt  cookies_new.txt  create_deployment_zip.sh  deploy-complete.sh  deploy-live-stream.sh  deploy-to-vps.ps1  deploy-to-vps.sh  deploy-windows.bat  deploy.sh  fix-502.sh  fix-nginx-http.sh  github-token-install.sh  github-vps-install.sh  install.sh  live_stream_routes.py  manual-vps-deploy.txt  models.py  nginx-fix.sh  pyproject.toml  quick-fix.sh  quick-install.sh  quick-update.sh  quick-vps-fix.sh  replit.md  (+9 more)
attached_assets/: Pasted--23-02-38-Configuring-process-manager-23-02-38-Setting-up-web-server-nginx-the-configura-1750892651173_1750892651173.txt  Pasted--The-above-exception-was-the-direct-cause-of-the-following-exception-Traceback-most-recent-cal-1750933903115_1750933903116.txt  Pasted--div-class-col-lg-2-d-none-d-lg-block-div-class-sidebar-ads-column-left-ads--1751793857922_1751793857923.txt  Pasted--venv-root-srv863913-opt-ayyildizhaber-export-DATABASE-URL-postgresql-ayyildizhaber-grep-DB--1750933750125_1750933750125.txt  Pasted-Database-initialization-FAILED-Class-class-models-Admin-already-has-a-primary-mapper-define-1750895831122_1750895831123.txt  Pasted-root-srv863913-ayyildizhaber-deployment-fix-production-error-sh--1750895347199_1750895347199.txt  (+2 more)
deployment/: README.md  (+43 more)
(+83 files in other folders)
