[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "requests>=2.32.4",
    "apscheduler>=3.11.0",
    "python-dateutil>=2.9.0.post0",
    "xml2js>=0.1",
]
